--- a/asset/sass/components/resource-link-info/_resource-link-info.scss
+++ b/asset/sass/components/resource-link-info/_resource-link-info.scss
@@ -39,7 +39,9 @@
 
     &.expanded &__panel {
         border: 1px solid $color__hr;
+        max-height: none;
         max-width: 20vw;
+        overflow: visible;
         padding: 8px 10px;
     }
 }
